--- a/_config.yml
+++ b/_config.yml
@@ -281,12 +281,12 @@ compress_html:
 
 # Defaults
 defaults:
-  # _post
+  # _posts
   - scope:
       path: ""
       type: posts
     values:
-      layout: single
+      layout: posts
       author_profile: true
       read_time: true
       comments: true
