--- a/_config.yml
+++ b/_config.yml
@@ -286,7 +286,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: posts
+      layout: post
       author_profile: true
       read_time: true
       comments: true
