--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,10 @@
 main:
   - title: "About"
     url: /about/
+
+  - title: "Categories"
+    url: /categories/
+
   - title: "Algorithm"
     url: /algorithm/
   # - title: "About"
